-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2
-
None
-
Windows 10
-
-
de90f2e06 (dev), 013793a78 (6.9), 9d576b3a7 (6.8)
If a Qt object stucks in its destructor while a thread finishes, QThread::isRunning returns false while the thread is still running.
Workaround. If QThread::isRunning returns false, call QThread::wait(0) also. If it returns false too, it means that the thread is still running.
| For Gerrit Dashboard: QTBUG-135163 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 634939,5 | QThread/Doc: improve docs on running, finished, and the OS thread | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 635808,2 | QThread/Doc: improve docs on running, finished, and the OS thread | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 635814,2 | QThread/Doc: improve docs on running, finished, and the OS thread | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |