QThread/Doc: improve docs on running, finished, and the OS thread

And take the opportunity to explain that the finished() signal does not
indicate the end of the operating system thread. Indeed, on some OSes,
not even wait() can be sure of that: for Unix systems, see the docs at
the top of qthread_unix.cpp about timed pthread_joins.

Pick-to: 6.8
Fixes: QTBUG-135163
Change-Id: Ie00a742f0707f57c767bfffd44bdaec40df05e4a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Andreas Eliasson <andreas.eliasson@qt.io>
(cherry picked from commit de90f2e064ffef2ed751b7805d81a93668dc67a2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>